--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -23,6 +23,5 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
+    - run: npm install
     - run: npm test
